# edu-exercitation_intelligent_system

./: .gitignore  API_keys.info  export_api_keys.sh  llm_TicTacToe_Agents.py  log_crew.txt
base_try/: .env  README.md  pyproject.toml
base_try/src/base_try/: crew.py  main.py
trip_planner/: README.md  log_crew.txt  pyproject.toml
trip_planner/src/trip_planner/: main.py  main_old.py
