[project]
name = "base_try"
version = "0.1.0"
description = "base_try using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
base_try = "base_try.main:run"
run_crew = "base_try.main:run"
train = "base_try.main:train"
replay = "base_try.main:replay"
test = "base_try.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
